fixed padding causing horizontal scroll in footer

--- a/style.css
+++ b/style.css
@@ -109,7 +109,11 @@ footer{
     bottom: 0;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    right:0;
+    width: 100vw;
+    max-width: 100%;
+    margin: 0 0 0 0;
+    padding:0 0 0 0;
 }
 #location-cont, #foot-link-cont{
     background-color: #f2f2f2;
@@ -118,6 +122,7 @@ footer{
     text-decoration: none; 
     display: flex;
     align-items: center;
+    padding: 0 0 0 0;
 }
 #foot-link-cont{
 height: 30px;
@@ -136,9 +141,8 @@ height: 30px;
     margin-left:auto;
 }
 #location{
-    padding-left: 20px;
     border: none;
-    height: 15px;
+    height: 15px;    
 }
 #how-search{
         margin-right: auto;  
@@ -155,5 +159,4 @@ height: 30px;
 }
 #carbon-neutral{
     padding-left: 5px;
-    padding-right: 8em;
 }
